--- a/server/views/seller_.html
+++ b/server/views/seller_.html
@@ -62,7 +62,7 @@
     <header>
       농산물 택배 주문 내역
     </header>
-    <input type="text" name="" value="날짜(예: 20170712) 입력">
+    <input type="text" name="" value="날짜(예: 20170712) 입력" method = "post" id ="date" name ="date" >
     <!-- 옵션별 주문 내역 -->
     <table class="option-sort">
       <thead>
@@ -76,11 +76,11 @@
       </thead>
       <tbody>
         <tr>
-          <td><% = A %></td>
-          <td><% = B %></td>
-          <td><% = C %></td>
-          <td><% = D %></td>
-          <td><% = E %></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
         </tr>
         </tr>
       </tbody>
